infra/k8s/base/localstack-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
  labels:
    app: localstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
        - name: localstack
          image: localstack/localstack-pro:latest
          ports:
            - containerPort: 4566
              name: edge
          volumeMounts:
            - name: storage-volume
              mountPath: /var/lib/localstack
            - name: config-volume
              mountPath: /etc/localstack/init/ready.d/init_localstack.sh
              subPath: init_localstack.sh
            - name: config-volume
              mountPath: /tmp/cors-config.json
              subPath: cors-config.json
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: s3-storage-pvc
        - name: config-volume
          configMap:
            name: localstack-config
            defaultMode: 0755
