infra/k8s/base/localstack-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack-svc
spec:
  selector:
    app: localstack
  ports:
  - port: 4566
    targetPort: 4566
